--- a/tpl/index.html
+++ b/tpl/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <title>Project Manga</title>
+    <title>Manga Project</title>
 </head>
 
 <body>
-    <h1>Api</h1>
+    <h1>Manga Project</h1>
+    <h2>Api</h2>
     <p>proyecto codoacodo</p>
 </body>
 
